crates/kply-cli/tests/snapshots/cli__command_group_check.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 230
expression: output
---
kply check
Command group is defined but behavior is intentionally pending.
