crates/kply-cli/tests/snapshots/cli__command_group_check_json.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 249
expression: value
---
{
  "command": "check",
  "status": "placeholder"
}
