crates/kply-cli/tests/snapshots/cli__command_group_cluster.snap
---
source: crates/kply-cli/tests/cli.rs
expression: output
---
kply cluster
Command group is defined but behavior is intentionally pending.
