crates/kply-cli/tests/snapshots/cli__command_group_cluster_json.snap
---
source: crates/kply-cli/tests/cli.rs
expression: value
---
{
  "command": "cluster",
  "status": "placeholder"
}
