crates/kply-cli/tests/snapshots/cli__command_group_completion.snap
---
source: crates/kply-cli/tests/cli.rs
expression: output
---
kply completion
Command group is defined but behavior is intentionally pending.
