crates/kply-cli/tests/snapshots/cli__command_group_completion_json.snap
---
source: crates/kply-cli/tests/cli.rs
expression: value
---
{
  "command": "completion",
  "status": "placeholder"
}
