crates/kply-cli/tests/snapshots/cli__command_group_config.snap
---
source: crates/kply-cli/tests/cli.rs
expression: output
---
kply config
Command group is defined but behavior is intentionally pending.
