crates/kply-cli/tests/snapshots/cli__command_group_config_json.snap
---
source: crates/kply-cli/tests/cli.rs
expression: value
---
{
  "command": "config",
  "status": "placeholder"
}
