crates/kply-cli/tests/snapshots/cli__command_group_demo.snap
---
source: crates/kply-cli/tests/cli.rs
expression: output
---
kply demo
Command group is defined but behavior is intentionally pending.
