crates/kply-cli/tests/snapshots/cli__command_group_demo_json.snap
---
source: crates/kply-cli/tests/cli.rs
expression: value
---
{
  "command": "demo",
  "status": "placeholder"
}
