crates/kply-cli/tests/snapshots/cli__command_group_policy.snap
---
source: crates/kply-cli/tests/cli.rs
expression: output
---
kply policy
Command group is defined but behavior is intentionally pending.
