crates/kply-cli/tests/snapshots/cli__command_group_policy_json.snap
---
source: crates/kply-cli/tests/cli.rs
expression: value
---
{
  "command": "policy",
  "status": "placeholder"
}
